:lipstick: Fix header change center position when scrollbar appeared

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,6 +14,8 @@
 } */
 
 body {
+  width: 100vw;
+  overflow-x: hidden;
   background-color: #39393A;
 }
 
